--- a/install
+++ b/install
@@ -1,18 +1,18 @@
 #!/bin/csh -f
-# Installs pyfvi
+# Installs fvi
 
 # run pylint to find egregious errors
 # this is optional, you can delete this line if you don't have pylint
 pylint -E --disable=no-member fvi
 
 # get the version number for python3
-set vers=`python3 -c 'import sys; print("3.%s" % (sys.version_info.minor))'`
+set vers=`python -c 'import sys; print("%s.%s" % (sys.version_info.major, sys.version_info.minor))'`
 echo "Installing fvi to ~/.home/bin (Python$vers)."
 
 # remove build directories from a previous install to assure a clean install
 rm -rf build dist pw.egg-info install.out
 
-# install pw
+# install fvi
 python$vers setup.py install --quiet --user >& install.out
 if ($status) then
     echo "Problems found, aborting (see install.out)"
@@ -20,4 +20,4 @@ if ($status) then
 endif
 
 # remove build directories, because I like a clean directory
-rm -rf build dist pyfvi.egg-info
+rm -rf build dist fvi.egg-info
