--- a/install
+++ b/install
@@ -1,23 +1,33 @@
-#!/bin/csh -f
+#!/bin/sh
 # Installs fvi
+
+python=python3
 
 # run pylint to find egregious errors
 # this is optional, you can delete this line if you don't have pylint
-pylint -E --disable=no-member fvi
+# pylint -E --disable=no-member fvi
 
 # get the version number for python3
-set vers=`python -c 'import sys; print("%s.%s" % (sys.version_info.major, sys.version_info.minor))'`
+vers=$($python -c 'import sys; print("%s.%s" % (sys.version_info.major, sys.version_info.minor))')
 echo "Installing fvi to ~/.home/bin (Python$vers)."
 
 # remove build directories from a previous install to assure a clean install
-rm -rf build dist pw.egg-info install.out
+rm -rf build dist fvi.egg-info install.out
 
 # install fvi
 python$vers setup.py install --quiet --user >& install.out
-if ($status) then
+if [ $? != 0 ] ; then
     echo "Problems found, aborting (see install.out)"
-    exit(1)
-endif
+    exit 1
+fi
+
+# setuptools no longer installs man pages properly, so I must fix things up
+for sect in 1
+do
+    mkdir -p ~/.local/man/man$sect
+    rm -f ~/.local/man/man$sect/fvi.$sect
+    ln -s ~/.local/lib/python$vers/site-packages/fvi-*.egg/man/man$sect/fvi.$sect ~/.local/man/man$sect
+done
 
 # remove build directories, because I like a clean directory
 rm -rf build dist fvi.egg-info
