--- a/install
+++ b/install
@@ -1,41 +1,4 @@
-#!/bin/bash
-# Installs fvi
-#
-# Requires Python3.5.
-#
-# This install script installs into ~/.local. It also installs the manpage into 
-# ~/.local/man.
-#
-# Rather than installing with this script, you can also install using:
-#    pip3 install fvi
+#!/bin/sh
+pip --quiet install --user --upgrade .
 
-cmd=fvi
-
-# Set python to the version of python you wish to use (ex. python2 or python3)
-python=python3
-
-# run pylint to find egregious errors
-# this is optional, you can delete this line if you don't have pylint
-# pylint -E --disable=no-member $cmd
-
-# Determine the version of python we are using
-vers=$($python -c 'import sys; print("%s.%s" % (sys.version_info[0], sys.version_info[1]))')
-echo "Installing $cmd to ~/.home/bin (Python$vers)."
-
-# remove build directories from a previous install to assure a clean install
-rm -rf build dist $cmd.egg-info install.out
-
-# install $cmd
-./manpage.py
-python$vers setup.py install --quiet --user >& install.out
-if [[ $? -ne 0 ]] ; then
-    echo "Problems found, aborting (see install.out)"
-    exit 1
-fi
-
-echo "installing manpage"
-rm ~/.local/man/man1/fvi.1
-cp fvi.1 ~/.local/man/man1/
-
-# remove build directories, because I like a clean directory
-rm -rf build dist $cmd.egg-info
+rm -rf build dist *.egg-info
